--- a/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.scss
+++ b/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.scss
@@ -1,9 +1,21 @@
 form {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  height: 100%;
+
+  // Virtual Scroll Viewport
+  .virtual-scroll-viewport {
+    width: 100%;
+    flex: 1;
+
+    .form-field-item {
+      padding-inline: var(--space-lg);
+    }
+  }
 
   .slide-toggle {
-    margin-bottom: 12px;
+    margin: var(--space-lg);
   }
 
   mat-spinner {
@@ -24,6 +36,7 @@ form {
       border-left: 4px solid var(--purple);
     }
   }
+
   .section-heading {
     margin: 16px 0 8px 0;
   }
